@@ -22,7 +22,7 @@
 	<File name="src/BasicClasses/SystemMessages.h" open="0" top="0" tabpos="0">
 		<Cursor position="2422" topLine="6" />
 	</File>
-	<File name="src/BasicClasses/SystemMessages.hpp" open="1" top="0" tabpos="17">
+	<File name="src/BasicClasses/SystemMessages.hpp" open="0" top="0" tabpos="17">
 		<Cursor position="3038" topLine="42" />
 	</File>
 	<File name="src/BasicClasses/Timer.cpp" open="0" top="0" tabpos="0">
@@ -62,13 +62,13 @@
 		<Cursor position="3936" topLine="73" />
 	</File>
 	<File name="src/TreeDBSCAN/ClusteringBackEnd.cpp" open="0" top="0" tabpos="12">
-		<Cursor position="7780" topLine="226" />
+		<Cursor position="3520" topLine="69" />
 	</File>
 	<File name="src/TreeDBSCAN/ClusteringBackEnd.h" open="0" top="0" tabpos="25">
 		<Cursor position="3376" topLine="36" />
 	</File>
-	<File name="src/TreeDBSCAN/ClusteringBackEndOffline.cpp" open="0" top="0" tabpos="6">
-		<Cursor position="6731" topLine="141" />
+	<File name="src/TreeDBSCAN/ClusteringBackEndOffline.cpp" open="1" top="0" tabpos="1">
+		<Cursor position="6731" topLine="133" />
 	</File>
 	<File name="src/TreeDBSCAN/ClusteringBackEndOffline.h" open="0" top="0" tabpos="2">
 		<Cursor position="2665" topLine="23" />
@@ -110,7 +110,10 @@
 		<Cursor position="110" topLine="0" />
 	</File>
 	<File name="src/TreeDBSCAN/Tree_DBSCAN_FE.cpp" open="0" top="0" tabpos="5">
-		<Cursor position="2540" topLine="43" />
+		<Cursor position="2965" topLine="40" />
+	</File>
+	<File name="src/TreeDBSCAN/Tree_DBSCAN_FE.h" open="0" top="0" tabpos="0">
+		<Cursor position="3523" topLine="33" />
 	</File>
 	<File name="src/libANN/ANN/ANN.h" open="0" top="0" tabpos="0">
 		<Cursor position="12420" topLine="265" />
@@ -134,7 +137,7 @@
 		<Cursor position="4808" topLine="54" />
 	</File>
 	<File name="src/libClustering/Classifier.hpp" open="0" top="0" tabpos="15">
-		<Cursor position="2605" topLine="16" />
+		<Cursor position="2700" topLine="16" />
 	</File>
 	<File name="src/libClustering/ClusteringAlgorithm.hpp" open="0" top="0" tabpos="0">
 		<Cursor position="4068" topLine="31" />
@@ -220,8 +223,8 @@
 	<File name="src/libDistributedClustering/libDistributedClustering.hpp" open="0" top="0" tabpos="16">
 		<Cursor position="3704" topLine="66" />
 	</File>
-	<File name="src/libDistributedClustering/libDistributedClusteringImplementation.cpp" open="1" top="0" tabpos="1">
-		<Cursor position="21725" topLine="634" />
+	<File name="src/libDistributedClustering/libDistributedClusteringImplementation.cpp" open="0" top="0" tabpos="1">
+		<Cursor position="20048" topLine="581" />
 	</File>
 	<File name="src/libDistributedClustering/libDistributedClusteringImplementation.hpp" open="0" top="0" tabpos="17">
 		<Cursor position="6312" topLine="133" />
@@ -233,16 +236,16 @@
 		<Cursor position="2864" topLine="27" />
 	</File>
 	<File name="src/libSharedComponents/BurstsDB.cpp" open="0" top="0" tabpos="3">
-		<Cursor position="22068" topLine="511" />
+		<Cursor position="21499" topLine="677" />
 	</File>
 	<File name="src/libSharedComponents/BurstsDB.hpp" open="0" top="0" tabpos="4">
-		<Cursor position="3042" topLine="59" />
+		<Cursor position="4115" topLine="107" />
 	</File>
 	<File name="src/libSharedComponents/CPUBurst.cpp" open="0" top="0" tabpos="26">
 		<Cursor position="4064" topLine="54" />
 	</File>
 	<File name="src/libSharedComponents/CPUBurst.hpp" open="0" top="0" tabpos="5">
-		<Cursor position="4791" topLine="87" />
+		<Cursor position="4791" topLine="176" />
 	</File>
 	<File name="src/libSharedComponents/CSVDataExtractor.cpp" open="0" top="0" tabpos="1">
 		<Cursor position="7283" topLine="287" />
@@ -253,26 +256,29 @@
 	<File name="src/libSharedComponents/ClusterInformation.hpp" open="0" top="0" tabpos="10">
 		<Cursor position="2594" topLine="51" />
 	</File>
-	<File name="src/libSharedComponents/ClusteredEventsPRVGenerator.cpp" open="1" top="1" tabpos="4">
-		<Cursor position="16053" topLine="230" />
+	<File name="src/libSharedComponents/ClusteredEventsPRVGenerator.cpp" open="0" top="0" tabpos="4">
+		<Cursor position="6156" topLine="187" />
 	</File>
-	<File name="src/libSharedComponents/ClusteredEventsPRVGenerator.hpp" open="1" top="0" tabpos="3">
-		<Cursor position="3201" topLine="55" />
+	<File name="src/libSharedComponents/ClusteredEventsPRVGenerator.hpp" open="0" top="0" tabpos="3">
+		<Cursor position="2744" topLine="34" />
 	</File>
 	<File name="src/libSharedComponents/ClusteredStatesPRVGenerator.cpp" open="0" top="0" tabpos="0">
-		<Cursor position="11608" topLine="303" />
+		<Cursor position="2740" topLine="30" />
 	</File>
-	<File name="src/libSharedComponents/ClusteredStatesPRVGenerator.hpp" open="1" top="0" tabpos="5">
-		<Cursor position="3457" topLine="45" />
+	<File name="src/libSharedComponents/ClusteredStatesPRVGenerator.hpp" open="0" top="0" tabpos="5">
+		<Cursor position="3230" topLine="44" />
 	</File>
-	<File name="src/libSharedComponents/ClusteredTRFGenerator.hpp" open="1" top="0" tabpos="6">
-		<Cursor position="3446" topLine="39" />
+	<File name="src/libSharedComponents/ClusteredTRFGenerator.cpp" open="0" top="0" tabpos="0">
+		<Cursor position="3636" topLine="66" />
+	</File>
+	<File name="src/libSharedComponents/ClusteredTRFGenerator.hpp" open="0" top="0" tabpos="6">
+		<Cursor position="2385" topLine="33" />
 	</File>
 	<File name="src/libSharedComponents/ClusteredTraceGenerator.cpp" open="0" top="0" tabpos="0">
 		<Cursor position="2557" topLine="25" />
 	</File>
-	<File name="src/libSharedComponents/ClusteredTraceGenerator.hpp" open="1" top="0" tabpos="2">
-		<Cursor position="3558" topLine="37" />
+	<File name="src/libSharedComponents/ClusteredTraceGenerator.hpp" open="0" top="0" tabpos="2">
+		<Cursor position="2527" topLine="5" />
 	</File>
 	<File name="src/libSharedComponents/ClusteringConfiguration.cpp" open="0" top="0" tabpos="0">
 		<Cursor position="6446" topLine="166" />
@@ -293,10 +299,10 @@
 		<Cursor position="3609" topLine="66" />
 	</File>
 	<File name="src/libSharedComponents/ClusteringStatistics.cpp" open="0" top="0" tabpos="8">
-		<Cursor position="2610" topLine="21" />
+		<Cursor position="13162" topLine="384" />
 	</File>
 	<File name="src/libSharedComponents/ClusteringStatistics.hpp" open="0" top="0" tabpos="9">
-		<Cursor position="7102" topLine="145" />
+		<Cursor position="9067" topLine="209" />
 	</File>
 	<File name="src/libSharedComponents/DataExtractor.cpp" open="0" top="0" tabpos="0">
 		<Cursor position="2449" topLine="14" />
@@ -310,14 +316,14 @@
 	<File name="src/libSharedComponents/DataExtractorFactory.hpp" open="0" top="0" tabpos="0">
 		<Cursor position="3139" topLine="41" />
 	</File>
-	<File name="src/libSharedComponents/PRVEventsDataExtractor.cpp" open="0" top="0" tabpos="9">
-		<Cursor position="4792" topLine="120" />
+	<File name="src/libSharedComponents/PRVEventsDataExtractor.cpp" open="1" top="0" tabpos="2">
+		<Cursor position="5711" topLine="154" />
 	</File>
 	<File name="src/libSharedComponents/PRVEventsDataExtractor.hpp" open="0" top="0" tabpos="19">
-		<Cursor position="4724" topLine="99" />
+		<Cursor position="2699" topLine="36" />
 	</File>
-	<File name="src/libSharedComponents/PRVStatesDataExtractor.cpp" open="0" top="0" tabpos="10">
-		<Cursor position="9648" topLine="232" />
+	<File name="src/libSharedComponents/PRVStatesDataExtractor.cpp" open="1" top="1" tabpos="3">
+		<Cursor position="5532" topLine="183" />
 	</File>
 	<File name="src/libSharedComponents/PRVStatesDataExtractor.hpp" open="0" top="0" tabpos="0">
 		<Cursor position="4720" topLine="90" />
@@ -350,7 +356,7 @@
 		<Cursor position="7479" topLine="223" />
 	</File>
 	<File name="src/libSharedComponents/TraceData.hpp" open="0" top="0" tabpos="8">
-		<Cursor position="3465" topLine="76" />
+		<Cursor position="6566" topLine="158" />
 	</File>
 	<File name="src/libSharedComponents/XMLParser.cpp" open="0" top="0" tabpos="13">
 		<Cursor position="5704" topLine="162" />
